<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="ResourceName">

    <string name="mall_app_logo">AndroidFrame</string>
    <string name="mall_shop_mall_app_name">module_shop_mall</string>
    <string name="mall_home_page">首页</string>
    <string name="mall_home_shop">商品</string>
    <string name="mall_home_cart">购物车</string>
    <string name="mall_home_knowledge_system">发现</string>
    <string name="mall_home_navigation">订单</string>
    <string name="mall_home_self">我的</string>

    <string name="mall_login_in">登陆</string>
    <string name="mall_welfare">福利</string>
    <string name="mall_video">视频</string>
    <string name="mall_about_us">关于我们</string>
    <string name="mall_logout">退出登录</string>

    <string name="mall_drawer_open">Open drawer</string>
    <string name="mall_drawer_close">Close drawer</string>

    //主页
    <string name="mall_item_article_author">作者：<xliff:g id="author">%s</xliff:g></string>
    <string name="mall_item_article_classify">分类：<xliff:g id="classify">%s</xliff:g></string>
    <string name="mall_item_article_time">时间：<xliff:g id="time">%s</xliff:g></string>

    //文章页面
    <string name="mall_web_tint">网页由 www.wanandroid.com 提供\n开源不易，欢迎各路大神Star</string>

    <string name="mall_search_null_tint">快来搜点干货吧*≧▽≦*</string>
    <string name="mall_history_search">搜索历史</string>
    <string name="mall_clear_all">清空</string>
    <string name="mall_hot_search">热搜</string>
    <string name="jup">跳过</string>
    <string name="item1">福利</string>
    <string name="item2">视频</string>
    <string name="item3">关于我们</string>
    <string name="item4">退出登录</string>

    <string name="share_view">shareView</string>
    <string name="open_project">开源项目</string>
    <string name="project">项目</string>
    <string name="navigation">导航</string>

    <string name="minute">分钟</string>
    <string name="hour">小时</string>
    <string name="one_day">1天</string>
    <string name="text_new">新</string>
    <string name="failed_to_cast_mode">\"切换模式失败ヽ(≧Д≦)ノ\"</string>
    <string name="main_goback" >上一步</string>
    <string name="main_goforward">下一步</string>
    <string name="main_refresh">刷新</string>
    <string name="main_finish">退出</string>
    <string name="main_fuli">福利</string>
    <string name="main_app_name">e眼</string>
    <string name="main_register">新用户注册</string>
    <string name="order">订单</string>
    <string name="type">更多</string>
    <string name="main_user_name">姓名</string>
    <string name="main_password">密码</string>
    <string name="main_login">登录</string>
    <string name="main_mobile">电话</string>
    <string name="main_gender">性别</string>
    <string name="main_age">年龄</string>
    <string name="main_nation">民族</string>
    <string name="main_politicsstatus">政治面貌</string>
    <string name="main_education">学历</string>
    <string name="main_address">地址</string>
    <string name="main_idcardno">身份证号码</string>
    <string name="item5">分享</string>
    <string name="main_share">NewMvp分享</string>
    <string name="main_scan">扫描</string>
</resources>
