<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:ignore="ResourceName">

    <LinearLayout
        android:layout_width="@dimen/dp_180"
        android:layout_height="@dimen/dp_45"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:background="@drawable/d68"
            android:visibility="gone" />

        <EditText
            android:id="@+id/mobile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/main_mobile"
            android:text=""
            android:textColor="@color/grey"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/dp_180"
        android:layout_height="@dimen/dp_45"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:background="@drawable/d68"
            android:visibility="gone" />

        <EditText
            android:id="@+id/psw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/main_password"
            android:inputType="numberPassword"
            android:text=""
            android:textColor="@color/grey"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="@dimen/dp_180"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/main_bt_blue"
        android:text="@string/main_login"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="忘记密码?" />

</LinearLayout>
